uf-8347: Email batch implemented.